<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.github.plexpt</groupId>
    <artifactId>SpriteSplit</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <logback.version>1.2.3</logback.version>
        <hutool-all.version>5.4.4</hutool-all.version>
        <opencsv.version>5.2</opencsv.version>
        <mysql-connector-java.version>5.1.47</mysql-connector-java.version>
        <forms_rt.version>7.0.3</forms_rt.version>
        <fastjson.version>1.2.74</fastjson.version>
        <sun-mail.version>1.6.2</sun-mail.version>
        <aliyun-java-sdk-core.version>4.4.2</aliyun-java-sdk-core.version>
        <poi.version>4.1.2</poi.version>
        <AppleJavaExtensions.version>1.4</AppleJavaExtensions.version>
        <qcloudsms.version>1.0.6</qcloudsms.version>
        <yunpian-java-sdk.version>1.2.7</yunpian-java-sdk.version>
        <velocity-engine-core.version>2.2</velocity-engine-core.version>
        <lombok.version>1.18.22</lombok.version>
        <commons.lang3.version>3.12.0</commons.lang3.version>
        <mybatis.version>3.5.6</mybatis.version>
        <sqlite-jdbc.version>3.36.0.1</sqlite-jdbc.version>
        <junit.version>4.13.1</junit.version>
        <httpasyncclient.version>4.1.4</httpasyncclient.version>
        <HikariCP.version>3.4.5</HikariCP.version>
        <quartz.version>2.3.2</quartz.version>
        <okhttp.version>4.9.1</okhttp.version>
        <aliyun-java-sdk-dysmsapi.version>1.1.0</aliyun-java-sdk-dysmsapi.version>
        <bce-java-sdk.version>0.10.134</bce-java-sdk.version>
        <qiniu-java-sdk.version>7.3.0</qiniu-java-sdk.version>
        <flatlaf.version>2.0.1</flatlaf.version>
        <flatlaf-extras.version>2.0.1</flatlaf-extras.version>
        <flatlaf-intellij-themes.version>2.0.1</flatlaf-intellij-themes.version>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/com.bulenkov/darcula -->
        <dependency>
            <groupId>com.bulenkov</groupId>
            <artifactId>darcula</artifactId>
            <version>2018.2</version>
        </dependency>

        <!--        <dependency>-->
        <!--            <groupId>com.formdev</groupId>-->
        <!--            <artifactId>flatlaf</artifactId>-->
        <!--            <version>${flatlaf.version}</version>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>com.formdev</groupId>-->
        <!--            <artifactId>flatlaf-extras</artifactId>-->
        <!--            <version>${flatlaf-extras.version}</version>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>com.formdev</groupId>-->
        <!--            <artifactId>flatlaf-intellij-themes</artifactId>-->
        <!--            <version>${flatlaf-intellij-themes.version}</version>-->
        <!--        </dependency>-->
        <!--GUI Designer -> binary class files-->
        <dependency>
            <groupId>com.intellij</groupId>
            <artifactId>forms_rt</artifactId>
            <version>${forms_rt.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.coobird</groupId>
            <artifactId>thumbnailator</artifactId>
            <version>0.4.17</version>
        </dependency>

        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-core</artifactId>
            <version>5.7.21</version>
        </dependency>
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-http</artifactId>
            <version>5.7.21</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons.lang3.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.github.plexpt/toolkit -->
        <dependency>
            <groupId>com.github.plexpt</groupId>
            <artifactId>toolkit</artifactId>
            <version>2021.1.0</version>
            <exclusions>
                <exclusion>
                    <artifactId>guava</artifactId>
                    <groupId>com.google.guava</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.36</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-core -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.2.11</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.11</version>
        </dependency>

        <!--        <dependency>-->
        <!--            <groupId>com.alibaba</groupId>-->
        <!--            <artifactId>easyexcel</artifactId>-->
        <!--            <version>3.0.5</version>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>io.github.vincenzopalazzo</groupId>
            <artifactId>material-ui-swing</artifactId>
            <version>1.1.2</version>
        </dependency>
    </dependencies>

    <!-- to add executable jar file with manifest file : -->
    <build>

        <!-- To parse properties files under resources folder : -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <!-- plugins : -->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>com.github.plexpt.spritesplit.App</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                        <phase>package</phase> <!-- bind to the packaging phase -->
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>io.github.fvarrui</groupId>
                <artifactId>javapackager</artifactId>
                <version>1.6.5</version>
                <configuration>
                    <bundleJre>true</bundleJre>
                    <mainClass>com.github.plexpt.spritesplit.App</mainClass>
                    <generateInstaller>true</generateInstaller>
                    <!-- 这行不能被格式化为多行，否则会出错-->
                    <vmArgs>--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports
                        jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports
                        jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports
                        jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports
                        jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                    </vmArgs>
                </configuration>
                <executions>
                    <execution>
                        <id>bundling-for-windows</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <platform>windows</platform>
                            <jrePath>C:\Program Files\Java\jre8u322</jrePath>
                            <createZipball>true</createZipball>
                            <administratorRequired>true</administratorRequired>
                            <winConfig>

                                <!-- general properties -->
                                <generateSetup>true</generateSetup>
                                <generateMsi>true</generateMsi>
                                <generateMsm>true</generateMsm>

                                <!-- setup generation properties -->
                                <setupMode>installForAllUsers</setupMode>
                                <createDesktopIconTask>true</createDesktopIconTask>
                                <disableDirPage>false</disableDirPage>
                                <disableFinishedPage>false</disableFinishedPage>
                                <removeOldLibs>true</removeOldLibs>
                                <setupLanguages>
                                    <english>compiler:Default.isl</english>
                                    <!--                                    <spanish>compiler:Languages\Chinese.isl</spanish>-->
                                </setupLanguages>
                            </winConfig>
                        </configuration>
                    </execution>
                    <!--                                        <execution>-->
                    <!--                                            <id>bundling-for-linux</id>-->
                    <!--                                            <phase>package</phase>-->
                    <!--                                            <goals>-->
                    <!--                                                <goal>package</goal>-->
                    <!--                                            </goals>-->
                    <!--                                            <configuration>-->
                    <!--                                                <platform>linux</platform>-->
                    <!--                                                <createTarball>true</createTarball>-->
                    <!--                                            </configuration>-->
                    <!--                                        </execution>-->
                    <!--                                                            <execution>-->
                    <!--                                                                <id>bundling-for-mac</id>-->
                    <!--                                                                <phase>package</phase>-->
                    <!--                                                                <goals>-->
                    <!--                                                                    <goal>package</goal>-->
                    <!--                                                                </goals>-->
                    <!--                                                                <configuration>-->
                    <!--                                                                    <platform>mac</platform>-->
                    <!--                                                                    <createTarball>true</createTarball>-->
                    <!--                    &lt;!&ndash;                                                <jdkPath>X:\\path\to\mac\jdk</jdkPath>&ndash;&gt;-->
                    <!--                                                                </configuration>-->
                    <!--                                                            </execution>-->
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
